// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`propToStype() when propToStyle receives an argument with breakpoint render only a single large breakpoint resolution 1`] = `
Array [
  "@media only screen and (min-width:",
  "1200",
  "px){",
  "text-align: center;",
  ";}",
]
`;

exports[`propToStype() when propToStyle receives an argument with breakpoint render only a single small breakpoint resolution 1`] = `
Array [
  "@media only screen and (min-width:",
  "0",
  "px){",
  "text-align: center;",
  ";}",
]
`;

exports[`propToStype() when propToStyle receives an argument with breakpoints render multiple breakpoints resolutions 1`] = `
Array [
  "@media only screen and (min-width:",
  "480",
  "px){",
  "text-align: center;",
  ";}",
  "@media only screen and (min-width:",
  "768",
  "px){",
  "text-align: left;",
  ";}",
  "@media only screen and (min-width:",
  "992",
  "px){",
  "text-align: center;",
  ";}",
]
`;
